--- a/Leetcode_Capriccio.ipynb
+++ b/Leetcode_Capriccio.ipynb
@@ -8782,7 +8782,11 @@
         "2. Node is a leaf node: left and right both None\n",
         "3. Node has left node, but no right node\n",
         "4. Node has right node, but no left node\n",
-        "5. Node has both left and right：让删除节点的上一个节点指向删除节点的右节点， 然后删除节点的左节点接到新的右子树的最左下的节点上"
+        "5. Node has both left and right：让删除节点的上一个节点指向删除节点的右节点， 然后删除节点的左节点接到新的右子树的最左下的节点上\n",
+        "\n",
+        "Complexity:\n",
+        "- Time complexity: o(h)\n",
+        "- Space complexity: o(h)"
       ],
       "metadata": {
         "id": "4dTcy3_e9D-7"
@@ -8794,7 +8798,7 @@
         "# recursion\n",
         "class Solution:\n",
         "    def deleteNode(self, root: Optional[TreeNode], key: int) -> Optional[TreeNode]:\n",
-        "        if not root:\n",
+        "        if not root: # base case\n",
         "            return\n",
         "        if root.val == key:\n",
         "            if not root.left and not root.right:\n",
@@ -8813,6 +8817,7 @@
         "                    cur = cur.left\n",
         "                prev.left = insert_node\n",
         "                return new_head\n",
+        "        # recursive case\n",
         "        elif root.val < key:\n",
         "            root.right = self.deleteNode(root.right, key)\n",
         "        else: # root.val > key\n",
@@ -8899,6 +8904,40 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "669. Trim a Binary Search Tree (medium)\n",
+        "\n",
+        "Given the root of a binary search tree and the lowest and highest boundaries as low and high, trim the tree so that all its elements lies in [low, high]. Trimming the tree should not change the relative structure of the elements that will remain in the tree (i.e., any node's descendant should remain a descendant). It can be proven that there is a unique answer.\n",
+        "\n",
+        "Return the root of the trimmed binary search tree. Note that the root may change depending on the given bounds."
+      ],
+      "metadata": {
+        "id": "KKqTjPEhcWLQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Solution:\n",
+        "    def trimBST(self, root: Optional[TreeNode], low: int, high: int) -> Optional[TreeNode]:\n",
+        "        if not root:\n",
+        "            return\n",
+        "        if root.val < low:\n",
+        "            return self.trimBST(root.right, low, high)\n",
+        "        if root.val > high:\n",
+        "            return self.trimBST(root.left, low, high)\n",
+        "        root.left = self.trimBST(root.left, low, high)\n",
+        "        root.right = self.trimBST(root.right, low, high)\n",
+        "        return root"
+      ],
+      "metadata": {
+        "id": "2x40McAecWlq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -8918,7 +8957,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Solution:\n",
+        "    def sortedArrayToBST(self, nums: List[int]) -> Optional[TreeNode]:\n",
+        "        if not nums:\n",
+        "            return\n",
+        "        l = 0\n",
+        "        r = len(nums) - 1\n",
+        "        mid = l + (r - l) // 2\n",
+        "        left = nums[:mid]\n",
+        "        right = nums[mid+1:]\n",
+        "        root = TreeNode(nums[mid])\n",
+        "        root.left = self.sortedArrayToBST(left)\n",
+        "        root.right = self.sortedArrayToBST(right)\n",
+        "        return root"
+      ],
       "metadata": {
         "id": "szp2jyZgaS9j"
       },
@@ -8939,6 +8992,71 @@
       "source": [],
       "metadata": {
         "id": "7BMV-8C737Pr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "538. Convert BST to greater tree (medium)\n",
+        "\n",
+        "Given the root of a Binary Search Tree (BST), convert it to a Greater Tree such that every key of the original BST is changed to the original key plus the sum of all keys greater than the original key in BST.\n",
+        "\n",
+        "从树中可以看出累加的顺序是右中左，所以我们需要反中序遍历这个二叉树，然后顺序累加就可以了"
+      ],
+      "metadata": {
+        "id": "KDq2w_F12kDU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# recursion\n",
+        "class Solution:\n",
+        "    def convertBST(self, root: Optional[TreeNode]) -> Optional[TreeNode]:\n",
+        "        def dfs(node):\n",
+        "            if not node:\n",
+        "                return\n",
+        "            dfs(node.right)\n",
+        "            self.total += node.val\n",
+        "            node.val = self.total\n",
+        "            dfs(node.left)\n",
+        "\n",
+        "        self.total = 0\n",
+        "        dfs(root)\n",
+        "        return root"
+      ],
+      "metadata": {
+        "id": "W6z9SL-n2kp_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# iteration\n",
+        "class Solution:\n",
+        "    def convertBST(self, root: Optional[TreeNode]) -> Optional[TreeNode]:\n",
+        "        if not root:\n",
+        "            return\n",
+        "        stack = []\n",
+        "        cur = root\n",
+        "        total = 0\n",
+        "        while stack or cur:\n",
+        "            if cur:\n",
+        "                stack.append(cur)\n",
+        "                cur = cur.right\n",
+        "            else:\n",
+        "                cur = stack.pop()\n",
+        "                total += cur.val\n",
+        "                cur.val = total\n",
+        "                cur = cur.left\n",
+        "        return root"
+      ],
+      "metadata": {
+        "id": "RGYlMM3kAu-1"
       },
       "execution_count": null,
       "outputs": []
